            are empty
	- misc
          - reflection-based recommender configuration from string: check
            whether properties are read-only
          - move GridSearch to experimental section
          - add Nelder-Mead algorithm for hyperparameter selection; currently
            only rating prediction is supported (experimental)
          - remove obsolete option_file functionality

1.02	2011-05-24
	- recommenders
          - BPR_Linear: less verbose output
          - BPRMF: fix loading/saving of models
          - BiasedMatrixFactorization: simplify a bit
          - SlopeOne: move computation of rating average to Train()
	  - BiPolarSlopeOne: fix loading/saving of models
          - UserItemBias: set default values for reg_u and reg_i
	- command-line tools
	  - item prediction: fix null pointer exception when no --test-file is
            given
          - rating prediction: save model file in all cases when requested
        - documentation
          - fix Doxygen API doc (wrong path)
          - Doxygen: do not build LaTeX doc; add main page
          - remove <inheritdoc/> XML tags - currently not supported by any
            tool we use
          - drop ImmDoc.NET support

1.01	2011-05-19
        - API changes
          - add interface IEntityMapping
          - IRatings: add CountByUser and CountByItem
        - recommenders
          - make ItemRecommender and RatingPredictor clonable
          - BiasedMatrixFactorization
            - rename BiasRegularization to BiasReg for consistency with other
              recommenders
            - different regularization parameters for user and item factors
            - add ComputeLoss() (also for MatrixFactorization)
            - add optional bold driver heuristic for learn rate adaptation
          - BPRMF:
            - get rid of unnecessary IterationLength parameter
            - only interate once over relevant data points in online learning
            - explicitly model item bias