@@ -15,7 +15,7 @@ echo "-----------------"
 
 # load/save currently not supported: global-average user-average item-average
 
-for method in SlopeOne BipolarSlopeOne MatrixFactorization BiasedMatrixFactorization
+for method in SlopeOne BipolarSlopeOne MatrixFactorization BiasedMatrixFactorization UserItemBaseline
 do
      echo $PROGRAM --training-file=u1.base --test-file=u1.test --recommender=$method --save-model=tmp.model --data-dir=$DATA_DIR
           $PROGRAM --training-file=u1.base --test-file=u1.test --recommender=$method --save-model=tmp.model --data-dir=$DATA_DIR | perl -pe "s/\w+ing_time \S+ ?//g" > output1.txt
